--- a/default.css
+++ b/default.css
@@ -166,6 +166,7 @@ h6 {
     height: 200px;
     width: 200px;
     object-fit: cover;
+    object-position: top;
     border: 4px solid var(--borderColor);
     display: block;
     margin: 0 auto;
